# sylph

./: .gitignore
.github/workflows/: release.yml  rust.yml
lua/: download.lua  job.lua  providers.lua  rustfilter.lua  sylph.lua  timer.lua  util.lua
plugin/: sylph.vim
rust/: Cargo.toml  build.rs
rust/benches/: main.rs
rust/src/: ffi.rs  lib.rs  main.rs  matcher.rs
rust/tests/: unit.rs
