[package]
name = "sylph"
version = "0.1.0"
authors = ["Tristan Konolige <tristan.konolige@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib", "rlib"]
name = "sylph"
path = "src/lib.rs"

[[bin]]
name = "sylph"
path = "src/main.rs"

[dependencies]
fuzzy-matcher = "*"
neovim-lib = "*"
anyhow = "*"
itertools = "*"
sublime_fuzzy = "*"
structopt = "*"
serde_json = "*"
rusqlite = "*"
serde = { version = "*", features = ["derive"] }

[build-dependencies]
cbindgen = "*"

[profile.release]
debug = true
# codegen-units = 1
lto = true
