[package]
name = "sylph"
version = "0.1.0"
authors = ["Tristan Konolige <tristan.konolige@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "filter"
path = "src/lib.rs"

[[bin]]
name = "sylph"
path = "src/main.rs"

[dependencies]
fuzzy-matcher = "*"
neovim-lib = "*"
anyhow = "*"
itertools = "*"
sublime_fuzzy = "*"
structopt = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
binary-heap-plus = "*"
crossbeam-channel = "*"
mlua = { version = "*", features = ["luajit", "module"] }
mlua_derive = "*"
strsim = "0.10.0"
lru = "*"

[build-dependencies]
cbindgen = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false

[profile.release]
debug = true
panic = "unwind"
# codegen-units = 1
# lto = true
